--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
           npm i -g wasm-pack 
           npm run wasm
           npm i
-          npm run build
+          npx vite build --base=/chip8-emulator
 
       - name: Setup Pages
         uses: actions/configure-pages@v2
