--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,15 +29,24 @@ jobs:
         with:
           toolchain: stable
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 8
+          run_install: false
+
       - name: Setup Node
         uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: pnpm
 
       - name: Build
         run: |
-          npm i -g wasm-pack 
-          npm run wasm
-          npm i
-          npx vite build --base=/chip8-emulator
+          pnpm i -g wasm-pack 
+          pnpm run wasm
+          pnpm i
+          pnpm dlx vite build --base=/chip8-emulator
 
       - name: Setup Pages
         uses: actions/configure-pages@v2
