:truck: move web bindings

--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -42,6 +42,7 @@ jobs:
           cache: pnpm
 
       - name: Build
+        working-directory: ./web
         run: |
           pnpm i -g wasm-pack 
           pnpm run wasm
@@ -54,7 +55,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: "dist"
+          path: "./web/dist"
 
       - name: Deploy to GitHub Pages
         id: deployment
