--- a/web/chip8-emulator-wasm/Cargo.toml
+++ b/web/chip8-emulator-wasm/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-chip8-emulator-lib = { path = "../../chip8-emulator-lib" }
+chip8-emulator = { path = "../../chip8-emulator" }
 getrandom = { version = "*", features = ["js"] }
 js-sys = "*"
 cfg-if = "1.0.0"
